Fixed the alignment issues with the timeline component.

--- a/css/style.css
+++ b/css/style.css
@@ -1287,12 +1287,14 @@ a.site-button{
   display:block;
   position:relative;
 }
+
 .history-tl-container ul.tl{
     margin:20px 0;
     padding:0;
     display:inline-block;
 
 }
+
 .history-tl-container ul.tl li{
     list-style: none;
     margin:auto;
@@ -1303,6 +1305,7 @@ a.site-button{
     padding:0 0 50px 30px;
     position:relative;
 }
+
 .history-tl-container ul.tl li:last-child{ border-left:0;}
 .history-tl-container ul.tl li::before{
     position: absolute;
@@ -1321,14 +1324,17 @@ a.site-button{
     border-color:  #258CC7;
     transition: all 1000ms ease-in-out;
 }
+
 ul.tl li .item-title{
     font-size: 22px;
     font-weight: 500;
 }
+
 ul.tl li .item-detail{
     color:rgba(0,0,0,0.5);
     font-size: 18px;
 }
+
 ul.tl li .timestamp{
     color: #8D8D8D;
     position: absolute;
@@ -1336,6 +1342,21 @@ ul.tl li .timestamp{
     left: -50%;
     text-align: right;
     font-size: 16px;
+}
+
+
+/*max Width 768px */
+
+@media screen and (max-width: 767px) {
+    .history-tl-container ul.tl li{
+        margin-left: 0px;
+    }
+    ul.tl li .timestamp{
+        text-align: left;
+        padding-left: 32px;
+        margin-top: -20px;
+        left: 0%;
+    }
 }
 
 .copyright {
